gen_corpus/grammar_params.txt
n_non_terminals: 6
n_pre_terminals: 14
n_terminals: 1400
n_nary_rules: 50
max_pt_per_terminal: 2
ambiguity_prob: 0.1
max_unary_rules: 1600
value_of_nt: 2
max_value_per_rhs: 7
unary_rules: [[   6   20]
 [   6   34]
 [   6   36]
 ...
 [  19 1017]
 [  19 1029]
 [  19 1043]]
nary_rules: [[ 0  6 12 16 -1 -1 -1 -1]
 [ 1 15 19 19 -1 -1 -1 -1]
 [ 2 12 11 17 16 15 -1 -1]
 [ 3  9 -1 -1 -1 -1 -1 -1]
 [ 4  9  9 16 -1 -1 -1 -1]
 [ 5 12 16 -1 -1 -1 -1 -1]
 [ 4  6 -1 -1 -1 -1 -1 -1]
 [ 3  0  7 -1 -1 -1 -1 -1]
 [ 5 15 18 -1 -1 -1 -1 -1]
 [ 0 13 -1 -1 -1 -1 -1 -1]
 [ 4 19 -1 -1 -1 -1 -1 -1]
 [ 5 12 10 11  7 -1 -1 -1]
 [ 4  9  7 -1 -1 -1 -1 -1]
 [ 1 14 10 -1 -1 -1 -1 -1]
 [ 3  5 11  1  1 10 -1 -1]
 [ 0 11 -1 -1 -1 -1 -1 -1]
 [ 0 18 -1 -1 -1 -1 -1 -1]
 [ 5 17  9  8 17 -1 -1 -1]
 [ 1  9  7 -1 -1 -1 -1 -1]
 [ 4  3  0  0 10 -1 -1 -1]
 [ 1 16  7 12 -1 -1 -1 -1]
 [ 0 19 -1 -1 -1 -1 -1 -1]
 [ 4 19 17 -1 -1 -1 -1 -1]
 [ 4 18 10 18 -1 -1 -1 -1]
 [ 1 11  6 18 14 -1 -1 -1]
 [ 3 17 16 14 -1 -1 -1 -1]
 [ 2 17  4 15  7 -1 -1 -1]
 [ 4  1  5 11  3 11 -1 -1]
 [ 5 12 -1 -1 -1 -1 -1 -1]
 [ 4  7  8 -1 -1 -1 -1 -1]
 [ 2  8 -1 -1 -1 -1 -1 -1]
 [ 0 14  8 -1 -1 -1 -1 -1]
 [ 2 14 19 -1 -1 -1 -1 -1]
 [ 1 14 -1 -1 -1 -1 -1 -1]
 [ 5 18 12 -1 -1 -1 -1 -1]
 [ 5 15 16 -1 -1 -1 -1 -1]
 [ 4  3  0 16 10 -1 -1 -1]
 [ 4 12 19 -1 -1 -1 -1 -1]
 [ 5  8 14 13 11 -1 -1 -1]
 [ 3  7 12  9  9 -1 -1 -1]
 [ 0  1 10 -1 -1 -1 -1 -1]
 [ 1  6  1  7 -1 -1 -1 -1]
 [ 5  9 -1 -1 -1 -1 -1 -1]
 [ 2 11 15  7 -1 -1 -1 -1]
 [ 0 16 12 -1 -1 -1 -1 -1]
 [ 5  9 -1 -1 -1 -1 -1 -1]
 [ 0  3  0 19 14 -1 -1 -1]
 [ 1 11 -1 -1 -1 -1 -1 -1]
 [ 5 15 -1 -1 -1 -1 -1 -1]
 [ 3 17  5  6 -1 -1 -1 -1]]
min_nt_value: [1. 1. 1. 1. 1. 1.]
min_rule_value: [3 3 5 1 3 2 1 2 2 1 1 4 2 2 5 1 1 4 2 4 3 1 2 3 4 3 4 5 1 2 1 2 2 1 2 2 4
 2 4 4 2 3 1 3 2 1 4 1 1 3]
